--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "youtubedemo",
+  "name": "loginauthentication",
   "version": "0.1.0",
   "private": true,
   "proxy": "https://loginform-authentication.herokuapp.com",
@@ -37,5 +37,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "engines": {
+    "npm": ">=6.0.0",
+    "node": ">=10.0.0"
   }
 }
