--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
-    "react-scripts": "^4.0.3",
-    "web-vitals": "^1.1.2"
+    "react-router-component": "^0.40.0",
+    "react-scripts": "5.0.0",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,7 +40,6 @@
     ]
   },
   "engines": {
-    "npm": ">=6.0.0",
-    "node": ">=10.0.0"
+    "npm": "4.7.0"
   }
 }
